# pummeluff_detektor

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
pummeluff_detektor/: __main__.py  loader.py  main.py
