[project]
name = "pummeluff-detektor"
version = "0.1.0"
description = "Detecct whether an image is of a jigglypuff or not"
authors = [
    {name = "Christoph J. Scherr",email = "software@cscherr.de"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scikit-learn (>=1.6.1,<2.0.0)",
    "kagglehub (>=0.3.9,<0.4.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "scipy (>=1.15.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
