[project]
name = "pummeluff-detektor"
version = "0.1.0"
description = "A ML-powered detector to distinguish Jigglypuff from imposters (especially Kirby!)"
authors = [{ name = "Christoph J. Scherr", email = "software@cscherr.de" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"scikit-learn>=1.6.1,<2.0.0",
	"kagglehub>=0.3.9,<0.4.0",
	"pillow>=11.1.0,<12.0.0",
	"numpy>=2.2.3,<3.0.0",
	"matplotlib>=3.10.0,<4.0.0",
	"seaborn>=0.13.2,<0.14.0",
	"tqdm>=4.67.1,<5.0.0",
	"joblib>=1.4.2,<2.0.0",
]

[project.scripts]
pummeluff-detektor = "pummeluff_detektor.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
