[tool.poetry]
name = "pummeluff-detektor"
version = "0.3.1"
description = "A sophisticated ML-powered detector to distinguish Jigglypuff from imposters (especially Kirby!)"
authors = ["Christoph J. Scherr <software@cscherr.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
scikit-learn = ">=1.6.1,<2.0.0"
pillow = ">=11.1.0,<12.0.0"
numpy = ">=2.2.3,<3.0.0"
matplotlib = ">=3.10.0,<4.0.0"
seaborn = ">=0.13.2,<0.14.0"
tqdm = ">=4.67.1,<5.0.0"
joblib = ">=1.4.2,<2.0.0"
appdirs = "^1.4.4"
huggingface-hub = "^0.29.1"

[tool.poetry.scripts]
pummeluff-detektor = "pummeluff_detektor.main:main"
jglydtk = "pummeluff_detektor.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
